--- a/game.html
+++ b/game.html
@@ -170,18 +170,18 @@
 
       
       // 先組出對方的 updates
-      await updates(targetRef, {
+      await update(targetRef, {
         money: (targetData.money || 0) + amount,
         [`investors/${player}`]: existingInvestment + amount
       });
       
-      // 如果對方是詐騙者且本回合還沒被投資過
-      if (targetData.role === "詐騙者" && !targetData.scammerGotInvestment) {
-        updates.money += 200; // 再加200元
-        updates.scammerGotInvestment = true; // 本回合設成 true
-      }
+      // // 如果對方是詐騙者且本回合還沒被投資過
+      // if (targetData.role === "詐騙者" && !targetData.scammerGotInvestment) {
+      //   updates.money += 200; // 再加200元
+      //   updates.scammerGotInvestment = true; // 本回合設成 true
+      // }
 
-      await update(targetRef, updates);
+      // await update(targetRef, updates);
 
       const myInvestmentRef = ref(db, `rooms/${room}/players/${player}/myInvestments`);
       const myInvestmentSnap = await get(myInvestmentRef);
