--- a/game.html
+++ b/game.html
@@ -117,13 +117,13 @@
                 }
                 // 交換身分記錄
                 updates[`rooms/${room}/players/${name}/choose`] = true;
+                await exchangeRolesIfNeeded(players, room, db);
               }
             }
             await update(ref(db), updates);
           }
-          //角色交換
+
           await exchangeRolesIfNeeded(players, room, db);
-          
           const endRoundNotice = document.getElementById("endRoundNotice");
           endRoundNotice.textContent = "🎉 所有人已結束本回合，已自動發放 $100 並更新角色狀態！";
           endRoundNotice.style.display = "block";
