--- a/game.html
+++ b/game.html
@@ -38,15 +38,7 @@
         });
       });
 
-      // // ⭐⭐⭐ 角色資訊即時監聽（推薦直接監聽整個玩家物件）
-      // const playerRef = ref(db, `rooms/${room}/players/${player}`);
-      // onValue(playerRef, snap => {
-      //     // 這裡只要你的角色（role）、choose、money 之類有改，UI 就會自動更新
-      //     renderRoleUI(player, room);
-      //     // 如果你想同步刷新餘額，可以：
-      //     document.getElementById("money").textContent = "$" + (snap.val()?.money ?? 0);
-      // });
-      
+      renderRoleUI(player, room);
       loadMyInvestments();
 
       const playersRef = ref(db, `rooms/${room}/players`);
@@ -123,9 +115,6 @@
                   // 提示欄位寫入（給前端 role.js 監聽）
                   updates[`rooms/${room}/players/${name}/penaltyNotice`] = "任職期間未回饋，扣除1000元";
                 }
-                // 下回合 renderRoleUI 會自動產生新選項
-                updates[`rooms/${room}/players/${name}/agentOption/locked`] = false;
-                updates[`rooms/${room}/players/${name}/agentOption/options`] = null; 
                 // 交換身分記錄
                 updates[`rooms/${room}/players/${name}/choose`] = true;
               }
@@ -301,10 +290,6 @@
         endRoundNotice.textContent = "⚡ 角色已隨機重新分配！普通人自動標記換身分";
         endRoundNotice.style.display = "block";
       }
-      // onValue(playerRef, snap => {
-      //   renderRoleUI(player, room);
-      // });
-
     }
   }
   </script>
