--- a/game.html
+++ b/game.html
@@ -41,10 +41,10 @@
       renderRoleUI(player, room);
       loadMyInvestments();
        // ⭐⭐ 加上這個，角色資料有變化就自動刷新畫面（包含角色交換、choose 狀態等）
-      const playerRef = ref(db, `rooms/${room}/players/${player}`);
-      onValue(playerRef, snap => {
-          renderRoleUI(player, room);
-      });
+      // const playerRef = ref(db, `rooms/${room}/players/${player}`);
+      // onValue(playerRef, snap => {
+      //     renderRoleUI(player, room);
+      // });
   
       
       const playersRef = ref(db, `rooms/${room}/players`);
