--- a/game.html
+++ b/game.html
@@ -375,6 +375,27 @@
     <button onclick="invest()">確認投資</button>
     <p id="investStatus"></p>
 
+    <div class="card">
+      <h3>建造卡牌：</h3>
+      <select id="buildCardSelect">
+        <option value="">請選擇卡牌</option>
+        <option value="1">1. 防詐學院</option>
+        <option value="2">2. 區塊鏈交易所</option>
+        <option value="3">3. 驗證服務中心</option>
+        <option value="4">4. 駭客軍團基地</option>
+        <option value="5">5. 防火牆城堡</option>
+        <option value="6">6. 加密VPN</option>
+        <option value="7">7. 零信任架構</option>
+        <option value="8">8. 165反詐騙專線</option>
+        <option value="9">9. 釣魚網站</option>
+        <option value="10">10. 防毒軟體</option>
+      </select>
+      <button id="buyCardBtn">購買</button>
+      <p id="buyCardStatus"></p>
+    </div>
+
+
+    
     <div style="margin-top: 1rem;">
       <button id="endTurnBtn">結束本回合動作</button>
       <p id="endTurnStatus" style="color: green;"></p>
