--- a/character-select.html
+++ b/character-select.html
@@ -71,7 +71,7 @@
 <body>
   <h2>請選擇你的角色</h2>
   <div class="role-card" onclick="selectRole('行騙者')">
-    <h3>詐騙者</h3>
+    <h3>行騙者</h3>
     <p>可以在任意回合捲走投資金。</p>
   </div>
   <div class="role-card" onclick="selectRole('投資代理人')">
@@ -79,7 +79,7 @@
     <p>可以收集投資並分配回報。</p>
   </div>
   <div class="role-card" onclick="selectRole('投資人')">
-    <h3>普通人</h3>
+    <h3>投資人</h3>
     <p>自由選擇是否投資與建造。</p>
   </div>
 </body>
